--- a/kimenarc-snack-bar/index.html
+++ b/kimenarc-snack-bar/index.html
@@ -7,7 +7,6 @@
     <script href="assets/code/code.js"></script>
     <link rel="icon" href="assets/img/kimenarc-logotipo.png">
     <title>
-        
         Produtos para aproveitar enquanto
         assiste a um bom filme
     </title>
@@ -15,10 +14,11 @@
 <body>
     <header>
         <div id="logo">
-            <img src="assets/img/kimenarc-logo.png" alt="">
+            <h1><img src="assets/img/kimenarc-logo.png" alt=""></h1>
         </div>
         <div>
-            <h1 id="titulo">Produtos para aproveitar enquanto assiste a um bom filme</h1>
+            <h1>SnackBar</h1>
+            <h2 id="titulo">Produtos para aproveitar enquanto assiste a um bom filme</h2>
         </div>            
     </header>
     <div id="texto-venda">
@@ -53,13 +53,18 @@
                     </button>                 
                 </td>
             </tr>
-        <!--
+
             <tr>
                 <td>
                     Refri 500ml 
                 </td>
                 <td>
                     R$ 10,00
+                </td>
+                <td class="right">
+                    <button class="button">
+                        <a href="manut.html">Comprar</a>
+                    </button>                 
                 </td>
             </tr>
             <tr>
@@ -69,6 +74,11 @@
                 <td>
                     R$ 12,00
                 </td>
+                <td class="right">
+                    <button class="button">
+                        <a href="manut.html">Comprar</a>
+                    </button>                 
+                </td>
             </tr>
             <tr>
                 <td>
@@ -76,6 +86,11 @@
                 </td>
                 <td>
                     R$ 8,00
+                </td>
+                <td class="right">
+                    <button class="button">
+                        <a href="manut.html">Comprar</a>
+                    </button>                 
                 </td>
             </tr>
 
@@ -87,6 +102,11 @@
                 <td>
                     R$ 15,00
                 </td>
+                <td class="right">
+                    <button class="button">
+                        <a href="manut.html">Comprar</a>
+                    </button>                 
+                </td>
             </tr>
             <tr>
                 <td>
@@ -94,6 +114,11 @@
                 </td>
                 <td>
                     R$ 20,00
+                </td>
+                <td class="right">
+                    <button class="button">
+                        <a href="manut.html">Comprar</a>
+                    </button>                 
                 </td>
             </tr>
             <tr>
@@ -103,6 +128,11 @@
                 <td>
                     R$ 25,00
                 </td>
+                <td class="right">
+                    <button class="button">
+                        <a href="manut.html">Comprar</a>
+                    </button>                 
+                </td>
             </tr>
             <tr>
                 <td>
@@ -110,6 +140,11 @@
                 </td>
                 <td>
                     R$ 18,00
+                </td>
+                <td class="right">
+                    <button class="button">
+                        <a href="manut.html">Comprar</a>
+                    </button>                 
                 </td>
             </tr>
             <tr>
@@ -119,6 +154,11 @@
                 <td>
                     R$ 24,00
                 </td>
+                <td class="right">
+                    <button class="button">
+                        <a href="manut.html">Comprar</a>
+                    </button>                 
+                </td>
             </tr>
             <tr>
                 <td>
@@ -127,14 +167,19 @@
                 <td>
                     R$ 30,00
                 </td>
+                <td class="right">
+                    <button class="button">
+                        <a href="manut.html">Comprar</a>
+                    </button>                 
+                </td>
             </tr>
-            -->
+
         </table>
     </div>
 
         
 
-
+    <div>
         <p>Confira os combos disponíveis pessoalmente na nossa bomboniere.
             Abaixo seguem algumas sugestões:</p> 
         <ul>
@@ -143,6 +188,6 @@
             <li>Combo Pipocas Doces e Salgadas: 2 pipocas grandes, uma doce e
                 uma salgada</li>
         </ul>
-
+    </div>
 </body>
 </html>
