--- a/kimenarc-snack-bar/index.html
+++ b/kimenarc-snack-bar/index.html
@@ -49,7 +49,7 @@
                 </td>
                 <td class="right">
                     <button class="button">
-                        <a href="manut.html">Comprar</a>
+                        <input type="number" min="0">
                     </button>                 
                 </td>
             </tr>
